<resources>
    <string name="app_name">HeartPlus</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>





    <string name="edit_reminder_title">Appointment Schedule - Edit</string>
    <string name="no_reminders">No Appointment Yet</string>
    <string name="menu_insert">Add Appointment</string>
    <string name="menu_delete">Delete Appointment</string>
    <string name="menu_settings">Settings</string>
    <string name="title">Title</string>
    <string name="info">Info</string>
    <string name="confirm">Save</string>
    <string name="str_btn_cancel">Cancel</string>
    <string name="edit_reminder">Edit Appointment</string>
    <string name="date">Appointment Date</string>
    <string name="time">Appointment Time</string>


    <!-- Toasts -->
    <string name="task_saved_message">Your appointment has been saved</string>

    <!-- Notification Bar -->
    <string name="notify_new_task_message">Upcoming Appointment!</string>
    <string name="notify_new_task_title">You have a doctors appointment!</string>

    <!-- Preferences -->
    <string name="pref_category_task_defaults_key">task_default_category</string>
    <string name="pref_category_task_defaults_title">Task Title Default</string>
    <string name="pref_task_title_key">default_reminder_title</string>
    <string name="pref_task_title_dialog_title">Default Appointment Title</string>
    <string name="pref_task_title_message">The default title for a reminder.</string>
    <string name="pref_task_title_summary">Default title for reminders.</string>
    <string name="pref_task_title_title">Default Appointment Title</string>

    <string name="pref_category_datetime_key">date_time_default_category</string>
    <string name="pref_category_datetime_title">Date Time Defaults</string>
    <string name="pref_default_time_from_now_key">time_from_now_default</string>
    <string name="pref_default_time_from_now_dialog_title">Time From Now</string>
    <string name="pref_default_time_from_now_message">The default time from now that a new Appointment should be set to.</string>
    <string name="pref_default_time_from_now_summary">Sets the default time for a Appointment.</string>
    <string name="pref_default_time_from_now_title">Default Appointment Time</string>




    <string name="edit_pill_title">Edit Pill Reminders</string>
    <string name="no_pills">No Pills Yet</string>
    <string name="insert">Add Reminder</string>
    <string name="delete">Delete Reminder</string>
    <string name="settings">Settings</string>

    <string name="dose">Dosage</string>
    <string name="instructions">Instructions</string>

    <string name="reminder">Edit Reminder</string>

    <!-- Toasts -->

    <!-- Notification Bar -->


    <!-- Preferences -->
    <string name="pref_default_key">task_default_category</string>
    <string name="pref_default_title">Task Title Default</string>
    <string name="pref_title_key">default_reminder_title</string>
    <string name="pref_dialog_title">Default Reminder Title</string>
    <string name="pref_title_message">The default title for a reminder.</string>
    <string name="pref_title_summary">Default title for reminders.</string>
    <string name="pref_title_title">Default Reminder Title</string>

    <string name="pref_time_key">date_time_default_category</string>
    <string name="pref_time_title">Date Time Defaults</string>
    <string name="pref_time_from_now_key">time_from_now_default</string>
    <string name="pref_time_from_now_dialog_title">Time From Now</string>
    <string name="pref_time_from_now_message">The default time from now that a new reminder should be set to.</string>
    <string name="pref_time_from_now_summary">Sets the default time for a reminder.</string>
    <string name="pref_time_from_now_title">Default Reminder Time</string>

    <string name="Monday">Mo</string>
    <string name="Tuesday">Tu</string>
    <string name="Wednesday">We</string>
    <string name="Thursday">Th</string>
    <string name="Friday">Fr</string>
    <string name="Saturday">Sa</string>
    <string name="Sunday">Su</string>

    <string name="title_activity_alert">Alert Activity Screen</string>
    <string name="title_activity_add">Add Alarm!</string>
    <string name="action_edit">edit</string>
    <string name="action_History">History</string>

</resources>
