<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="false">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dose" />

        <EditText
            android:id="@+id/dose"
            android:layout_width="185dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions" />

        <EditText
            android:id="@+id/instructions"
            android:layout_width="317dp"
            android:layout_height="100dp"
            android:minLines="5"
            android:scrollbars="vertical"
            android:gravity="top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />

        <Button
            android:id="@+id/pill_date"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time" />

        <Button
            android:id="@+id/pill_time"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <Button
            android:id="@+id/confirm"
            android:text="@string/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</ScrollView>